force-app/main/default/objects/Case/fields/ChassisNumber__c.field-meta.xml
<CustomField>
    <fullName>ChassisNumber__c</fullName>
    <label>車台番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>