force-app/main/default/objects/Case/fields/CheckDetail1__c.field-meta.xml
<CustomField>
    <fullName>CheckDetail1__c</fullName>
    <label>【帳票使用項目】確認内容1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>