force-app/main/default/objects/Case/fields/CheckDetail2__c.field-meta.xml
<CustomField>
    <fullName>CheckDetail2__c</fullName>
    <label>【帳票使用項目】確認内容2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>