force-app/main/default/objects/Case/fields/CheckDetail3__c.field-meta.xml
<CustomField>
    <fullName>CheckDetail3__c</fullName>
    <label>【帳票使用項目】確認内容3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>