force-app/main/default/objects/Case/fields/CheckItem1__c.field-meta.xml
<CustomField>
    <fullName>CheckItem1__c</fullName>
    <label>【帳票使用項目】確認項目1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>