force-app/main/default/objects/Case/fields/CheckItem2__c.field-meta.xml
<CustomField>
    <fullName>CheckItem2__c</fullName>
    <label>【帳票使用項目】確認項目2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>