force-app/main/default/objects/Case/fields/CheckItem3__c.field-meta.xml
<CustomField>
    <fullName>CheckItem3__c</fullName>
    <label>【帳票使用項目】確認項目3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>