force-app/main/default/objects/Case/fields/Co_OpContinuation__c.field-meta.xml
<CustomField>
    <fullName>Co_OpContinuation__c</fullName>
    <label>生協継続</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>