force-app/main/default/objects/Case/fields/CommencementInsuranceWareki__c.field-meta.xml
<CustomField>
    <fullName>CommencementInsuranceWareki__c</fullName>
    <label>保険始期（和暦）（代理店報告リスト用）</label>
    <length>7</length>
    <type>Text</type>
</CustomField>