force-app/main/default/objects/Case/fields/CommencementOfInsuranceW__c.field-meta.xml
<CustomField>
    <fullName>CommencementOfInsuranceW__c</fullName>
    <formula>IF ( AND ( CommencementOfInsurance__c &gt;= DATE (1868,09,08), CommencementOfInsurance__c &lt;= DATE (1912,07,29)), 
  &quot;M&quot; &amp; IF(YEAR ( CommencementOfInsurance__c ) - 1867 &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( YEAR ( CommencementOfInsurance__c ) - 1867 ) &amp; 
   IF(MONTH ( CommencementOfInsurance__c ) &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( MONTH ( CommencementOfInsurance__c ))  &amp;
   IF(DAY ( CommencementOfInsurance__c ) &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( DAY ( CommencementOfInsurance__c )) , 

IF ( AND ( CommencementOfInsurance__c &gt;= DATE (1912,07,30), CommencementOfInsurance__c &lt;= DATE (1926,12,24)), 
  &quot;T&quot; &amp; IF(YEAR ( CommencementOfInsurance__c ) - 1911 &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( YEAR ( CommencementOfInsurance__c ) - 1911 ) &amp; 
   IF(MONTH ( CommencementOfInsurance__c ) &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( MONTH ( CommencementOfInsurance__c ))  &amp;
   IF(DAY ( CommencementOfInsurance__c ) &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( DAY ( CommencementOfInsurance__c )) , 

IF ( AND ( CommencementOfInsurance__c &gt;= DATE (1926,12,25), CommencementOfInsurance__c &lt;= DATE (1989,01,07)), 
  &quot;S&quot; &amp; IF(YEAR ( CommencementOfInsurance__c ) - 1925 &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( YEAR ( CommencementOfInsurance__c ) - 1925 ) &amp; 
   IF(MONTH ( CommencementOfInsurance__c ) &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( MONTH ( CommencementOfInsurance__c ))  &amp;
   IF(DAY ( CommencementOfInsurance__c ) &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( DAY ( CommencementOfInsurance__c )) , 


IF ( AND ( CommencementOfInsurance__c &gt;= DATE (1989,01,08), CommencementOfInsurance__c &lt;= DATE (2019,04,30)), 
  &quot;H&quot; &amp; IF(YEAR ( CommencementOfInsurance__c ) - 1988 &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( YEAR ( CommencementOfInsurance__c ) - 1988 ) &amp; 
   IF(MONTH ( CommencementOfInsurance__c ) &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( MONTH ( CommencementOfInsurance__c ))  &amp;
   IF(DAY ( CommencementOfInsurance__c ) &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( DAY ( CommencementOfInsurance__c )) , 

IF ( CommencementOfInsurance__c &gt;= DATE (2019,05,01), 

  &quot;R&quot; &amp; IF(YEAR ( CommencementOfInsurance__c ) - 2018 &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( YEAR ( CommencementOfInsurance__c ) - 2018 ) &amp; 
   IF(MONTH ( CommencementOfInsurance__c ) &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( MONTH ( CommencementOfInsurance__c ))  &amp;
   IF(DAY ( CommencementOfInsurance__c ) &lt; 10 ,&quot;0&quot;,&quot;&quot; ) &amp; TEXT ( DAY ( CommencementOfInsurance__c )) , 
&quot;&quot;)))))</formula>
    <label>保険始期（和暦）</label>
    <type>Text</type>
</CustomField>