force-app/main/default/objects/Case/fields/CommunicationColumn__c.field-meta.xml
<CustomField>
    <fullName>CommunicationColumn__c</fullName>
    <label>【帳票使用項目】ご連絡事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>