force-app/main/default/objects/Case/fields/CompensationEnded__c.field-meta.xml
<CustomField>
    <fullName>CompensationEnded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>満期日付補償終了と確認</label>
    <type>Checkbox</type>
</CustomField>