force-app/main/default/objects/Case/fields/Complete_Address_Report__c.field-meta.xml
<CustomField>
    <fullName>Complete_Address_Report__c</fullName>
    <formula>IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;その他&quot;,CancellationCompletion_Address__c,
IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;請求者&quot;,MailingAddress__c,
IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;契約者&quot;,ContractorAddress__c,&quot;&quot;)))</formula>
    <label>解約完了_送付先住所_帳票用</label>
    <type>Text</type>
</CustomField>