force-app/main/default/objects/Case/fields/Complete_Addressee_Person_Report__c.field-meta.xml
<CustomField>
    <fullName>Complete_Addressee_Person_Report__c</fullName>
    <formula>IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;その他&quot;,Cancellation_Addressee_PersonInCharge__c,
IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;請求者&quot;,AddresseeName_Formula__c,
IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;契約者&quot;,ContractorName__c,&quot;&quot;)))</formula>
    <label>解約完了_宛名・担当者_帳票用</label>
    <type>Text</type>
</CustomField>