force-app/main/default/objects/Case/fields/Complete_CorporationName_Report__c.field-meta.xml
<CustomField>
    <fullName>Complete_CorporationName_Report__c</fullName>
    <formula>IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;その他&quot;,Cancellation_Completed_Addressee_SCompan__c,
IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;請求者&quot;,AddresseeCorporateName__c,
IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;契約者&quot;,&quot;&quot;,&quot;&quot;)))</formula>
    <label>解約完了_宛名法人名_帳票用</label>
    <type>Text</type>
</CustomField>