force-app/main/default/objects/Case/fields/Complete_NumberOfApartment_Report__c.field-meta.xml
<CustomField>
    <fullName>Complete_NumberOfApartment_Report__c</fullName>
    <formula>IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;その他&quot;,Cancellation_Complete_Address__c,
IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;請求者&quot;,&quot;&quot;,
IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;契約者&quot;,&quot;&quot;,&quot;&quot;)))</formula>
    <label>解約完了_送付先番地・マンション_帳票用</label>
    <type>Text</type>
</CustomField>