force-app/main/default/objects/Case/fields/Complete_PostalCode_Report__c.field-meta.xml
<CustomField>
    <fullName>Complete_PostalCode_Report__c</fullName>
    <formula>IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;その他&quot;,CancellationCompletion_PostalCode__c,
IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;請求者&quot;,PostalCode__c,
IF(TEXT(CompletionNoticeMailingAddress__c) == &quot;契約者&quot;,PostCode__c,&quot;&quot;)))</formula>
    <label>解約完了_送付先郵便番号_帳票用</label>
    <type>Text</type>
</CustomField>