force-app/main/default/objects/Case/fields/Completed_Conversation_AttributeOther__c.field-meta.xml
<CustomField>
    <fullName>Completed_Conversation_AttributeOther__c</fullName>
    <label>解約完了_会話相手属性その他</label>
    <length>80</length>
    <type>Text</type>
</CustomField>