force-app/main/default/objects/Case/fields/Completed_Conversation_Party_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Completed_Conversation_Party_Attribute__c</fullName>
    <label>解約完了_会話相手属性</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>契約者</fullName>
            </value>
            <value>
                <fullName>代理店</fullName>
            </value>
            <value>
                <fullName>販売店等</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>