force-app/main/default/objects/Case/fields/CompletionStatus__c.field-meta.xml
<CustomField>
    <fullName>CompletionStatus__c</fullName>
    <label>完了ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>完了A</fullName>
            </value>
            <value>
                <fullName>完了B</fullName>
            </value>
            <value>
                <fullName>完了C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>