force-app/main/default/objects/Case/fields/ConfidentialTreatment__c.field-meta.xml
<CustomField>
    <fullName>ConfidentialTreatment__c</fullName>
    <label>情報取り扱い同意</label>
    <length>255</length>
    <type>Text</type>
</CustomField>