force-app/main/default/objects/Case/fields/ConfirmationConsentVerification__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationConsentVerification__c</fullName>
    <label>個人情報同意判別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>