force-app/main/default/objects/Case/fields/ConfirmationNameChange_Check__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationNameChange_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>名変確認書　【セルフチェック】</label>
    <type>Checkbox</type>
</CustomField>