force-app/main/default/objects/Case/fields/ConfirmationOfPayee_Formula__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationOfPayee_Formula__c</fullName>
    <description>計上G確認用</description>
    <formula>TEXT(ConfirmationOfPayee__c)</formula>
    <label>振込先確認</label>
    <type>Text</type>
</CustomField>