force-app/main/default/objects/Case/fields/ConfirmationOfPayee_Other_Fields__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationOfPayee_Other_Fields__c</fullName>
    <label>振込先確認_その他_記入欄</label>
    <length>100</length>
    <type>Text</type>
</CustomField>