force-app/main/default/objects/Case/fields/ConfirmationOfPayee_Other_Formula__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationOfPayee_Other_Formula__c</fullName>
    <description>計上G確認用</description>
    <formula>ConfirmationOfPayee_Other_Fields__c</formula>
    <label>振込先確認_その他</label>
    <type>Text</type>
</CustomField>