force-app/main/default/objects/Case/fields/Contact_Cancellation_File__c.field-meta.xml
<CustomField>
    <fullName>Contact_Cancellation_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>連絡事項_解約ファイル</label>
    <type>Checkbox</type>
</CustomField>