force-app/main/default/objects/Case/fields/Contact_Cancellation_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Cancellation_File_Number__c</fullName>
    <label>連絡事項_解約ファイル番号</label>
    <length>6</length>
    <type>Text</type>
</CustomField>