force-app/main/default/objects/Case/fields/Contact_Cancellation_Return_Funds__c.field-meta.xml
<CustomField>
    <fullName>Contact_Cancellation_Return_Funds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>連絡事項_解約返戻金</label>
    <type>Checkbox</type>
</CustomField>