force-app/main/default/objects/Case/fields/Contact_CancellationRefundAmount__c.field-meta.xml
<CustomField>
    <fullName>Contact_CancellationRefundAmount__c</fullName>
    <label>連絡事項_解約返戻金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>