force-app/main/default/objects/Case/fields/ContactInfo__c.field-meta.xml
<CustomField>
    <fullName>ContactInfo__c</fullName>
    <label>事務上連絡先</label>
    <length>13</length>
    <type>Text</type>
</CustomField>