force-app/main/default/objects/Case/fields/ContactInformation__c.field-meta.xml
<CustomField>
    <fullName>ContactInformation__c</fullName>
    <label>書類不備_連絡事項</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>