force-app/main/default/objects/Case/fields/ContactPersonRelationship__c.field-meta.xml
<CustomField>
    <fullName>ContactPersonRelationship__c</fullName>
    <label>契約者と折返し連絡者の関係</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>業者</fullName>
            </value>
            <value>
                <fullName>譲受人</fullName>
            </value>
            <value>
                <fullName>契約者本人</fullName>
            </value>
            <value>
                <fullName>配偶者</fullName>
            </value>
            <value>
                <fullName>同居／父母</fullName>
            </value>
            <value>
                <fullName>同居／子</fullName>
            </value>
            <value>
                <fullName>同居／婿・嫁</fullName>
            </value>
            <value>
                <fullName>同居／その他親族</fullName>
            </value>
            <value>
                <fullName>別居／父母_#</fullName>
            </value>
            <value>
                <fullName>別居／子_#</fullName>
            </value>
            <value>
                <fullName>別居／婿・嫁_#</fullName>
            </value>
            <value>
                <fullName>別居／その他親族_#</fullName>
            </value>
            <value>
                <fullName>法定相続人</fullName>
            </value>
            <value>
                <fullName>親権者</fullName>
            </value>
            <value>
                <fullName>代理店_#</fullName>
            </value>
            <value>
                <fullName>(富国)内務職員_#</fullName>
            </value>
            <value>
                <fullName>(富国)営業職員_#</fullName>
            </value>
            <value>
                <fullName>その他_#</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>