force-app/main/default/objects/Case/fields/ContractInformationId__c.field-meta.xml
<CustomField>
    <fullName>ContractInformationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約情報</label>
    <referenceTo>Contract_Information__c</referenceTo>
    <relationshipLabel>カスタマーセンターコールデータ</relationshipLabel>
    <relationshipName>Case</relationshipName>
    <type>Lookup</type>
</CustomField>