force-app/main/default/objects/Case/fields/Contractor_NamedInsuredPerson_Relation__c.field-meta.xml
<CustomField>
    <fullName>Contractor_NamedInsuredPerson_Relation__c</fullName>
    <label>契約者と（新）記名被保険者との関係</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本人</fullName>
            </value>
            <value>
                <fullName>配偶者</fullName>
            </value>
            <value>
                <fullName>同居親族</fullName>
            </value>
            <value>
                <fullName>別居親族</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>