force-app/main/default/objects/Case/fields/ContractorAddress__c.field-meta.xml
<CustomField>
    <fullName>ContractorAddress__c</fullName>
    <label>契約者住所</label>
    <length>100</length>
    <type>Text</type>
</CustomField>