force-app/main/default/objects/Case/fields/ContractorBirthday__c.field-meta.xml
<CustomField>
    <fullName>ContractorBirthday__c</fullName>
    <label>契約者生年月日</label>
    <type>Date</type>
</CustomField>