force-app/main/default/objects/Case/fields/ContractorCorporateName__c.field-meta.xml
<CustomField>
    <fullName>ContractorCorporateName__c</fullName>
    <label>契約法人名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>