force-app/main/default/objects/Case/fields/ContractorIdentityVerification__c.field-meta.xml
<CustomField>
    <fullName>ContractorIdentityVerification__c</fullName>
    <label>契約者本人確認</label>
    <length>255</length>
    <type>Text</type>
</CustomField>