force-app/main/default/objects/Case/fields/ContractorName__c.field-meta.xml
<CustomField>
    <fullName>ContractorName__c</fullName>
    <label>契約者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>