force-app/main/default/objects/Case/fields/ContractorName_Kana__c.field-meta.xml
<CustomField>
    <fullName>ContractorName_Kana__c</fullName>
    <label>契約者名カナ（データ連携）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>