force-app/main/default/objects/Case/fields/ContractorPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractorPhoneNumber__c</fullName>
    <label>契約者名電話番号（データ連携）</label>
    <length>20</length>
    <type>Text</type>
</CustomField>