force-app/main/default/objects/Case/fields/ContractorSex__c.field-meta.xml
<CustomField>
    <fullName>ContractorSex__c</fullName>
    <label>契約者性別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>男</fullName>
            </value>
            <value>
                <fullName>女</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>