force-app/main/default/objects/Case/fields/ConversationalPartner__c.field-meta.xml
<CustomField>
    <fullName>ConversationalPartner__c</fullName>
    <label>計上_会話相手</label>
    <length>50</length>
    <type>Text</type>
</CustomField>