force-app/main/default/objects/Case/fields/counterparty_Kana__c.field-meta.xml
<CustomField>
    <fullName>counterparty_Kana__c</fullName>
    <label>入電者カナ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>