force-app/main/default/objects/Case/fields/CreatedDateText__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateText__c</fullName>
    <label>受付日</label>
    <length>100</length>
    <type>Text</type>
</CustomField>