force-app/main/default/objects/Case/fields/CreateKind__c.field-meta.xml
<CustomField>
    <fullName>CreateKind__c</fullName>
    <formula>IF(TEXT(InsuranceItem_1__c) == &quot;火災&quot;,&quot;01&quot;,
        IF(TEXT(InsuranceItem_1__c) == &quot;傷害&quot;,&quot;08&quot;,
        IF(TEXT(InsuranceItem_1__c) == &quot;積立火災&quot;,&quot;05&quot;,&quot;06&quot;
        )))</formula>
    <label>作成区分</label>
    <type>Text</type>
</CustomField>