force-app/main/default/objects/Case/fields/CreateYearMonth__c.field-meta.xml
<CustomField>
    <fullName>CreateYearMonth__c</fullName>
    <description>作成日（オープン日時）の年月を取得</description>
    <formula>LEFT(TEXT(CreatedDate),4) + &quot;/&quot; + MID(TEXT(CreatedDate) ,6,2)</formula>
    <label>レコード作成年月</label>
    <type>Text</type>
</CustomField>