force-app/main/default/objects/Case/fields/Customer_Specified__c.field-meta.xml
<CustomField>
    <fullName>Customer_Specified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>お客様指定あり</label>
    <type>Checkbox</type>
</CustomField>