force-app/main/default/objects/Case/fields/CustomerZip__c.field-meta.xml
<CustomField>
    <fullName>CustomerZip__c</fullName>
    <formula>IF(ISBLANK(Contact.PostalCode__c),PolicyholderZipCode__c,Contact.PostalCode__c)</formula>
    <label>【帳票使用項目】郵便番号</label>
    <type>Text</type>
</CustomField>