force-app/main/default/objects/Case/fields/DamageDate__c.field-meta.xml
<CustomField>
    <fullName>DamageDate__c</fullName>
    <label>事故日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>