force-app/main/default/objects/Case/fields/DamagedPropertyAddress__c.field-meta.xml
<CustomField>
    <fullName>DamagedPropertyAddress__c</fullName>
    <label>被害物件住所</label>
    <length>100</length>
    <type>Text</type>
</CustomField>