force-app/main/default/objects/Case/fields/Damages__c.field-meta.xml
<CustomField>
    <fullName>Damages__c</fullName>
    <label>損害物</label>
    <length>255</length>
    <type>Text</type>
</CustomField>