force-app/main/default/objects/Case/fields/DateIssue__c.field-meta.xml
<CustomField>
    <fullName>DateIssue__c</fullName>
    <label>交付年月日or事実発生日</label>
    <type>Date</type>
</CustomField>