force-app/main/default/objects/Case/fields/DateOccurrence__c.field-meta.xml
<CustomField>
    <fullName>DateOccurrence__c</fullName>
    <description>旧称「事実発生日」項目</description>
    <label>交付年月日or事実発生日</label>
    <length>20</length>
    <type>Text</type>
</CustomField>