force-app/main/default/objects/Case/fields/DateOfCallSuspension__c.field-meta.xml
<CustomField>
    <fullName>DateOfCallSuspension__c</fullName>
    <label>コール中止日</label>
    <type>Date</type>
</CustomField>