force-app/main/default/objects/Case/fields/DateOfCancellationNotice__c.field-meta.xml
<CustomField>
    <fullName>DateOfCancellationNotice__c</fullName>
    <label>解約通知作成日</label>
    <type>Date</type>
</CustomField>