force-app/main/default/objects/Case/fields/DateOfCreationOfDocumentDispatch__c.field-meta.xml
<CustomField>
    <fullName>DateOfCreationOfDocumentDispatch__c</fullName>
    <label>書類送付作成日</label>
    <type>Date</type>
</CustomField>