force-app/main/default/objects/Case/fields/DateofDeathAndCause__c.field-meta.xml
<CustomField>
    <fullName>DateofDeathAndCause__c</fullName>
    <label>死亡日・原因</label>
    <length>255</length>
    <type>Text</type>
</CustomField>