force-app/main/default/objects/Case/fields/DateOfTransfer__c.field-meta.xml
<CustomField>
    <fullName>DateOfTransfer__c</fullName>
    <label>異動日</label>
    <type>Date</type>
</CustomField>