force-app/main/default/objects/Case/fields/DateOfTransfer_DateOfDeath__c.field-meta.xml
<CustomField>
    <fullName>DateOfTransfer_DateOfDeath__c</fullName>
    <label>異動日（死亡日）</label>
    <type>Date</type>
</CustomField>