force-app/main/default/objects/Case/fields/DateOfTransfer_Formula__c.field-meta.xml
<CustomField>
    <fullName>DateOfTransfer_Formula__c</fullName>
    <formula>DateOfTransfer__c</formula>
    <label>異動日（転居予定日）</label>
    <type>Date</type>
</CustomField>