force-app/main/default/objects/Case/fields/DatePosted__c.field-meta.xml
<CustomField>
    <fullName>DatePosted__c</fullName>
    <label>計上日</label>
    <type>Date</type>
</CustomField>