force-app/main/default/objects/Case/fields/DateRelationship__c.field-meta.xml
<CustomField>
    <fullName>DateRelationship__c</fullName>
    <label>満期日と開始日の関係</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>満期日～7日以内</fullName>
            </value>
            <value>
                <fullName>８日～13ヵ月</fullName>
            </value>
            <value>
                <fullName>13ヵ月越え</fullName>
            </value>
            <value>
                <fullName>有効</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>