force-app/main/default/objects/Case/fields/DeathAndAccidentalDeath__c.field-meta.xml
<CustomField>
    <fullName>DeathAndAccidentalDeath__c</fullName>
    <label>人身傷害死亡後遺</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>