force-app/main/default/objects/Case/fields/Deficiency__c.field-meta.xml
<CustomField>
    <fullName>Deficiency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>不備あり</label>
    <type>Checkbox</type>
</CustomField>