force-app/main/default/objects/Case/fields/Deficiency_Notification_To_Business_Cont__c.field-meta.xml
<CustomField>
    <fullName>Deficiency_Notification_To_Business_Cont__c</fullName>
    <label>不備通知送付先_業務連絡</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>