force-app/main/default/objects/Case/fields/DeficiencyNoticeMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>DeficiencyNoticeMailingAddress__c</fullName>
    <label>不備通知送付先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bank_transfer_or_mailing_address</valueSetName>
    </valueSet>
</CustomField>