force-app/main/default/objects/Case/fields/DeficiencyResolvedResult__c.field-meta.xml
<CustomField>
    <fullName>DeficiencyResolvedResult__c</fullName>
    <label>不備解消結果</label>
    <length>100</length>
    <type>Text</type>
</CustomField>