force-app/main/default/objects/Case/fields/DeletionOfReservationOfOwnership__c.field-meta.xml
<CustomField>
    <fullName>DeletionOfReservationOfOwnership__c</fullName>
    <label>所有権留保の削除</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>必要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>