force-app/main/default/objects/Case/fields/DemandNoticeCreationDate__c.field-meta.xml
<CustomField>
    <fullName>DemandNoticeCreationDate__c</fullName>
    <label>督促通知作成日</label>
    <type>DateTime</type>
</CustomField>