force-app/main/default/objects/Case/fields/DesiredContactDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>DesiredContactDateAndTime__c</fullName>
    <label>連絡希望日時</label>
    <length>30</length>
    <type>Text</type>
</CustomField>