force-app/main/default/objects/Case/fields/DetailsOfDeficiency__c.field-meta.xml
<CustomField>
    <fullName>DetailsOfDeficiency__c</fullName>
    <label>不備内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>